# simpleworks

./: 404.html  Cargo.toml  Makefile  README.md  crypto_primitives.html  index.html  overview.html  print.html  searchindex.js  searchindex.json
.github/workflows/: ci.yml  gh-pages.yml
docs/: book.toml  uint_substraction.md
docs/src/: SUMMARY.md  crypto_primitives.md  overview.md
docs/src/gadgets/: complex_gadgets.md  gadgets.md
examples/: manual-constraints.rs  test-circuit.rs
examples/merkle-tree/: common.rs  main.rs
examples/schnorr-signature/: main.rs
examples/simple-payments/: account.rs  ledger.rs  main.rs  transaction.rs
gadgets/: complex_gadgets.html  gadgets.html
src/: lib.rs
src/encryption/: mod.rs  xchacha.rs
src/fields/: mod.rs  serialization.rs
src/gadgets/: address.rs  boolean.rs  field.rs  helpers.rs  int16.rs  int32.rs  int64.rs  int8.rs  mod.rs  poseidon.rs  record.rs  traits.rs  uint128.rs  uint16.rs  uint32.rs  uint64.rs  uint8.rs
src/hash/: helpers.rs  mod.rs
src/marlin/: mod.rs  serialization.rs
src/merkle_tree/: constraints.rs  merkle_tree.rs  merkle_tree_verification_u8.rs  mod.rs  simple_merkle_tree.rs  test.rs
src/schnorr_signature/: blake2s.rs  mod.rs  parameters_var.rs  public_key_var.rs  schnorr.rs  schnorr_signature_verify_gadget.rs  signature_var.rs
src/types/: value.rs
tests/: encrypt.rs
