[package]
name = "simpleworks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Arkworks dependencies
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-ed-on-bls12-381 = { version = "^0.3.0", features = ["r1cs"] }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = ["curve"] }
ark-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false  }
ark-poly = { version = "^0.3.0", default-features = false  }
ark-poly-commit = { version = "^0.3.0", default-features = false  }
ark-marlin = { git = "https://github.com/arkworks-rs/marlin.git" }
ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-snark = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false }
ark-crypto-primitives = { version = "^0.3.0", default-features = true, features = [ "r1cs" ] }

# Important Note: the version of blake2 must be 0.9
blake2 = { version = "0.9" }
rand_chacha = { version = "0.3.1" }

anyhow = "1"
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.3" }
bitvec = "1"
