[package]
name = "simpleworks"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[profile.test]
opt-level = 3
debug-assertions = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Arkworks dependencies
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-ed-on-bls12-377 = { version = "^0.3.0", features = ["r1cs"] }
ark-bls12-377 = { version = "^0.3.0", default-features = false, features = ["curve"] }
ark-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false  }
ark-poly = { version = "^0.3.0", default-features = false  }
ark-poly-commit = { version = "^0.3.0", default-features = false  }
ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-snark = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false }
ark-crypto-primitives = { version = "^0.3.0", default-features = true, features = [ "r1cs" ] }
ark-sponge = { version = "^0.3.0", default-features = false, features = ["r1cs"] }

# we use our fork of marlin crate, branch "use-constraint-system-directly"
ark-marlin = { git = "https://github.com/Entropy1729/marlin.git", branch = "use-constraint-system-directly" }
rand = { version = "0.8", default-features = false, features = ["std_rng"]}

# Important Note: the version of blake2 must be 0.9
blake2 = { version = "0.9" }
rand_chacha = { version = "0.3.1" }

anyhow = "1"
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.3" }
bitvec = "1"

derivative = { version = "2.0", features = ["use_core"] }
digest = "0.9"
hex = "0.4.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
indexmap = { version = "1", features = ["serde"] }

[[example]]
name = "manual-constraints"

[[example]]
name = "test-circuit"

[[example]]
name = "merkle-tree"

[[example]]
name = "schnorr-signature"
